[package]
name = "rmb"
version = "0.1.0"
authors = ["Rick  Duff <rgduff@gmail.com>"]
edition = "2018"
publish = false

description = "Rust Message Bus - a generic publish/subscribe crate"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
