[package]
name = "msgbus"
version = "0.1.3-alpha.0"
authors = ["Rick Duff <rgduff@gmail.com>"]
edition = "2018"
publish = false

description = "Message Bus - a generic publish/subscribe crate"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
